--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ node_modules
 .env
 .env.*
 !.env.example
+#PWA
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
