--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   "dependencies": {
     "@pankod/refine-core": "^3.18.0",
     "@pankod/refine-nextjs-router": "^3.18.0",
+    "@pankod/refine-simple-rest": "^3.18.0",
+    "lodash": "^4.17.21",
     "next": "^12.1.6",
     "next-compose-plugins": "^2.2.1",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@pankod/refine-simple-rest": "^3.18.0"
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.0",
+    "@types/lodash": "^4.14.184",
+    "@types/node": "^14.14.13",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/node": "^14.14.13",
     "@typescript-eslint/parser": "^4.9.1",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   }
 }
